--- a/YamadaGameEngine/YamadaGameEngine.vcxproj.filters
+++ b/YamadaGameEngine/YamadaGameEngine.vcxproj.filters
@@ -25,6 +25,15 @@
     <Filter Include="ヘッダー ファイル\GameEngine\Interface">
       <UniqueIdentifier>{2d9f6e47-e2ed-449f-a85a-e058d6567213}</UniqueIdentifier>
     </Filter>
+    <Filter Include="ヘッダー ファイル\GameEngine\Component">
+      <UniqueIdentifier>{2914ed53-6a77-484f-91cb-47b68d51dac5}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ヘッダー ファイル\GameEngine\System">
+      <UniqueIdentifier>{738a883c-d134-49d7-b1ec-5d9c3a163093}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ソース ファイル\GameEngine\System">
+      <UniqueIdentifier>{2c63f765-1013-4a99-9cef-81187530cbbb}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\main.cpp">
@@ -48,38 +57,35 @@
     <ClCompile Include="src\Renderer.cpp">
       <Filter>ソース ファイル\GameEngine</Filter>
     </ClCompile>
-    <ClCompile Include="src\RenderSystem.cpp">
-      <Filter>ソース ファイル\GameEngine</Filter>
-    </ClCompile>
-    <ClCompile Include="src\CameraSystem.cpp">
-      <Filter>ソース ファイル\GameEngine</Filter>
-    </ClCompile>
     <ClCompile Include="src\PipelineManager.cpp">
       <Filter>ソース ファイル\GameEngine</Filter>
     </ClCompile>
     <ClCompile Include="include\LoadCSO.cpp">
       <Filter>ソース ファイル\GameEngine</Filter>
     </ClCompile>
-    <ClCompile Include="src\MaterialSystem.cpp">
-      <Filter>ソース ファイル\GameEngine</Filter>
-    </ClCompile>
     <ClCompile Include="include\TransformComponent.cpp">
       <Filter>ソース ファイル\GameEngine</Filter>
     </ClCompile>
+    <ClCompile Include="src\CameraSystem.cpp">
+      <Filter>ソース ファイル\GameEngine\System</Filter>
+    </ClCompile>
     <ClCompile Include="src\exampleSystem.cpp">
-      <Filter>ソース ファイル\GameEngine</Filter>
+      <Filter>ソース ファイル\GameEngine\System</Filter>
+    </ClCompile>
+    <ClCompile Include="src\MaterialSystem.cpp">
+      <Filter>ソース ファイル\GameEngine\System</Filter>
+    </ClCompile>
+    <ClCompile Include="src\RenderSystem.cpp">
+      <Filter>ソース ファイル\GameEngine\System</Filter>
     </ClCompile>
     <ClCompile Include="src\TransformSystem.cpp">
-      <Filter>ソース ファイル\GameEngine</Filter>
-    </ClCompile>
-    <ClCompile Include="src\FBXData.cpp">
-      <Filter>ソース ファイル</Filter>
+      <Filter>ソース ファイル\GameEngine\System</Filter>
     </ClCompile>
     <ClCompile Include="src\AssetManager.cpp">
-      <Filter>ソース ファイル</Filter>
+      <Filter>ソース ファイル\GameEngine</Filter>
     </ClCompile>
     <ClCompile Include="src\ModelData.cpp">
-      <Filter>ソース ファイル</Filter>
+      <Filter>ソース ファイル\GameEngine</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -119,53 +125,50 @@
     <ClInclude Include="include\Renderer.h">
       <Filter>ヘッダー ファイル\GameEngine</Filter>
     </ClInclude>
-    <ClInclude Include="include\MeshComponent.h">
-      <Filter>ヘッダー ファイル\GameEngine</Filter>
-    </ClInclude>
-    <ClInclude Include="include\MaterialComponent.h">
-      <Filter>ヘッダー ファイル\GameEngine</Filter>
-    </ClInclude>
-    <ClInclude Include="include\CameraComponent.h">
-      <Filter>ヘッダー ファイル\GameEngine</Filter>
-    </ClInclude>
-    <ClInclude Include="include\RenderSystem.h">
-      <Filter>ヘッダー ファイル\GameEngine</Filter>
-    </ClInclude>
     <ClInclude Include="include\LoadCSO.h">
-      <Filter>ヘッダー ファイル\GameEngine</Filter>
-    </ClInclude>
-    <ClInclude Include="include\TransformSystem.h">
-      <Filter>ヘッダー ファイル\GameEngine</Filter>
-    </ClInclude>
-    <ClInclude Include="include\TransformComponent.h">
-      <Filter>ヘッダー ファイル\GameEngine</Filter>
-    </ClInclude>
-    <ClInclude Include="include\CameraSystem.h">
-      <Filter>ヘッダー ファイル\GameEngine</Filter>
-    </ClInclude>
-    <ClInclude Include="include\EntityBase.h">
       <Filter>ヘッダー ファイル\GameEngine</Filter>
     </ClInclude>
     <ClInclude Include="include\CameraEntity.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="include\MaterialSystem.h">
-      <Filter>ヘッダー ファイル\GameEngine</Filter>
-    </ClInclude>
     <ClInclude Include="include\PipelineManager.h">
       <Filter>ヘッダー ファイル\GameEngine</Filter>
     </ClInclude>
-    <ClInclude Include="include\FBXData.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="include\AssetManager.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="include\ModelComponent.h">
+    <ClInclude Include="include\ModelData.h">
       <Filter>ヘッダー ファイル\GameEngine</Filter>
     </ClInclude>
-    <ClInclude Include="include\ModelData.h">
-      <Filter>ヘッダー ファイル</Filter>
+    <ClInclude Include="include\AssetManager.h">
+      <Filter>ヘッダー ファイル\GameEngine</Filter>
+    </ClInclude>
+    <ClInclude Include="include\CameraComponent.h">
+      <Filter>ヘッダー ファイル\GameEngine\Component</Filter>
+    </ClInclude>
+    <ClInclude Include="include\MaterialComponent.h">
+      <Filter>ヘッダー ファイル\GameEngine\Component</Filter>
+    </ClInclude>
+    <ClInclude Include="include\MeshComponent.h">
+      <Filter>ヘッダー ファイル\GameEngine\Component</Filter>
+    </ClInclude>
+    <ClInclude Include="include\ModelComponent.h">
+      <Filter>ヘッダー ファイル\GameEngine\Component</Filter>
+    </ClInclude>
+    <ClInclude Include="include\TransformComponent.h">
+      <Filter>ヘッダー ファイル\GameEngine\Component</Filter>
+    </ClInclude>
+    <ClInclude Include="include\CameraSystem.h">
+      <Filter>ヘッダー ファイル\GameEngine\System</Filter>
+    </ClInclude>
+    <ClInclude Include="include\MaterialSystem.h">
+      <Filter>ヘッダー ファイル\GameEngine\System</Filter>
+    </ClInclude>
+    <ClInclude Include="include\RenderSystem.h">
+      <Filter>ヘッダー ファイル\GameEngine\System</Filter>
+    </ClInclude>
+    <ClInclude Include="include\TransformSystem.h">
+      <Filter>ヘッダー ファイル\GameEngine\System</Filter>
+    </ClInclude>
+    <ClInclude Include="include\EntityBase.h">
+      <Filter>ヘッダー ファイル\GameEngine\Interface</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
