--- a/YamadaGameEngine/YamadaGameEngine.vcxproj
+++ b/YamadaGameEngine/YamadaGameEngine.vcxproj
@@ -24,13 +24,15 @@
     <ClCompile Include="include\TransformComponent.cpp" />
     <ClCompile Include="src\AssetManager.cpp" />
     <ClCompile Include="src\CameraSystem.cpp" />
-    <ClCompile Include="src\cube.cpp" />
+    <ClCompile Include="src\CubeGeneratorSystem.cpp" />
+    <ClCompile Include="src\DropCubeEntity.cpp" />
+    <ClCompile Include="src\DropCubeSystem.cpp" />
     <ClCompile Include="src\exampleEntity.cpp" />
     <ClCompile Include="src\exampleSystem.cpp" />
     <ClCompile Include="src\GameScene.cpp" />
+    <ClCompile Include="src\GeneratorEntity.cpp" />
     <ClCompile Include="src\InputManager.cpp" />
     <ClCompile Include="src\main.cpp" />
-    <ClCompile Include="src\MaterialSystem.cpp" />
     <ClCompile Include="src\ModelData.cpp" />
     <ClCompile Include="src\PipelineManager.cpp" />
     <ClCompile Include="src\Renderer.cpp" />
@@ -43,12 +45,17 @@
     <ClInclude Include="include\CameraComponent.h" />
     <ClInclude Include="include\CameraEntity.h" />
     <ClInclude Include="include\CameraSystem.h" />
-    <ClInclude Include="include\Cube.h" />
+    <ClInclude Include="include\CubeGeneratorComponent.h" />
+    <ClInclude Include="include\CubeGeneratorSystem.h" />
+    <ClInclude Include="include\DropCubeComponent.h" />
+    <ClInclude Include="include\DropCubeEntity.h" />
+    <ClInclude Include="include\DropCubeSystem.h" />
     <ClInclude Include="include\EntityBase.h" />
     <ClInclude Include="include\exampleComponent.h" />
     <ClInclude Include="include\exampleEntity.h" />
     <ClInclude Include="include\exampleSystem.h" />
     <ClInclude Include="include\GameScene.h" />
+    <ClInclude Include="include\GeneratorEntity.h" />
     <ClInclude Include="include\IComponent.h" />
     <ClInclude Include="include\IEntity.h" />
     <ClInclude Include="include\InputManager.h" />
@@ -56,7 +63,6 @@
     <ClInclude Include="include\ISystem.h" />
     <ClInclude Include="include\LoadCSO.h" />
     <ClInclude Include="include\MaterialComponent.h" />
-    <ClInclude Include="include\MaterialSystem.h" />
     <ClInclude Include="include\MeshComponent.h" />
     <ClInclude Include="include\ModelComponent.h" />
     <ClInclude Include="include\ModelData.h" />
